syntax = "proto3";

package kitsune.common;

// --- Start: Type definitions ---

enum SearchIndex {
    // Account search index
    Account = 0;

    // Post search index
    Post = 1;
}

// --- End: Type definitions ---
