syntax = "proto3";

package kitsune.search;

// --- Start: Message definitions ---

message SearchResult {
    oneof index {
        // Unique identifier of an account entry
        bytes account_id = 1;

        // Unique identifier of a post entry
        bytes post_id = 2;
    }
}

message SearchRequest {
    // Query for searching through the entries
    string query = 1;

    // Offset
    uint64 offset = 2;
}

message SearchResponse {
    // List of search results
    repeated SearchResult result = 1;
}

// --- End: Message definitions ---

service Search {
    // Search through all the entries
    rpc Search(SearchRequest) returns (SearchResponse);
}
